# copy-generator-

./: .gitignore  README.md  REQUIREMENTS.md  cli.py  pyproject.toml  render.yaml  requirements.txt  start.bat
core/: access_auth.py  ad_law_check.py  anti_detect.py  context.py  data_loader.py  database.py  generator.py  llm_parse.py  prompt_builder.py  prompt_skills.py  templates.py
data/: auth.env.example  copy_examples.txt  db_config.example.json  llm_config.example.json  profile.json  sensitive_words.json  services.json  style.json
deploy/: AUTODL.md  RENDER_DASHBOARD.md  render.env
llm/: base.py  openai_compat.py
scripts/: autodl_dev.sh  autodl_serve.sh  feature_test.py  free_port.py  probe_uutool.py  probe_uutool_js.py  render_build.sh  smoke_test.py
tests/: test_access_auth.py  test_ad_law_check.py  test_auth_api.py  test_context_templates.py  test_database.py  test_llm_parse.py  test_prompt_skills.py  test_templates.py
web/: server.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.vue  main.ts
web/frontend/src/api/: auth.ts  client.ts
web/frontend/src/components/: CompareModal.vue  ToastHost.vue  VariantCard.vue
web/frontend/src/composables/: useApiHealth.ts  useToast.ts
web/frontend/src/config/: navigation.ts
web/frontend/src/layouts/: AppShell.vue  SettingsLayout.vue
web/frontend/src/router/: index.ts
web/frontend/src/stores/: app.ts  toast.ts
web/frontend/src/styles/: main.css
web/static/: app.js  build-required.html  legacy-index.html  style.css
(+26 files in other folders)
